--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <header class="header">
+        <div class="background-header"></div>
         <h1>
             Tenha um melhor desempenho em menos tempo! <span> feito por : <a href="#">Lucas Pedrolo</a></span>
         </h1>
