--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animationsCss.css">
     <title>Pomodoro Timer</title>
 </head>
 
 <body>
 
     <header class="header">
-        <div class="background-header"></div>
+        <div class="sky">
+            <div class="stars"></div>
+            <div class="stars2"></div>
+        </div>
+
         <h1>
-            Tenha um melhor desempenho em menos tempo! <span> feito por : <a href="#">Lucas Pedrolo</a></span>
+            Tenha um melhor desempenho em menos tempo!
         </h1>
     </header>
 
