--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <button type="button"> Pause</button>
             </div>
 
-            <div class="how-started">
+            <button class="more">Saiba um pouco mais</button>
+
+            <div class="how-started hidden">
                 <h2>Como surgiu a técnica de pomodoro</h2>
 
                 <p>
