--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/animationsCss.css">
+    <!--Icons-->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Pomodoro Timer</title>
 </head>
 
@@ -25,13 +28,16 @@
     <main>
         <section class="main-section">
             <div class="pomodoro-timer">
-                <div class="Timer">25:00</div>
+                <div class="spin-efects"></div>
+                
+                <div class="timer">25:00</div>
 
-                <button type="button">Start</button>
-                <button type="button">Reset</button>
-                <button type="button"> Pause</button>
+                <div class="options-timer">
+                    <button type="button">Start</button>
+                    <button type="button">Reset</button>
+                    <button type="button"> Pause</button>
+                </div>
             </div>
-
             <button class="more">Saiba um pouco mais</button>
 
             <div class="how-started hidden">
@@ -56,6 +62,16 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-content">Feito com
+            <span class="material-symbols-outlined">
+                favorite</span> por
+            <a href="">Lucas Pedrolo</a>
+        </div>
+        <div class="footer-content">Veja o projeto no <a href="">GitHub</a></div>
+        <div class="footer-content">acesse meu <a href="">portfolio</a> para ver mais sobre mim</div>
+    </footer>
 
     <script src="./js/script.js"></script>
 
