--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 
     <main>
         <section class="main-section">
+            <div class="pomodoro-timer-animation"></div>
             <div class="pomodoro-timer">
-
                 <div class="timer">25:00</div>
-
                 <div class="options-timer">
                     <button type="button">Start</button>
                     <button type="button">Reset</button>
