--- a/index.html
+++ b/index.html
@@ -39,32 +39,46 @@
         </section>
 
         <section class="section-content-more">
-            <article>
-                <div class="how-started">
-                    <h2>Como surgiu a técnica de pomodoro</h2>
+            <article class="how-started">
 
-                    <p>
-                        A Técnica Pomodoro de estudo foi criada pelo italiano Francesco Cirillo. Em 1988 o então
-                        estudante
-                        universitário decidiu organizar melhor seus estudos. Para isso, ele usou um daqueles cronômetros
-                        de
-                        cozinha com o formato de um tomate (pomodoro, em italiano) para gerenciar o seu tempo.Foi criada
-                        para utilizar o tempo como um valioso aliado. Ela visa melhorar a agilidade do cérebro, aumentar
-                        o
-                        foco, além de aperfeiçoar continuamente os processos e organizar os estudos.
-                    </p>
+                <h2>Como surgiu a técnica de pomodoro</h2>
 
-                    <h2>O que é a técncia pomodoro?</h2>
+                <p>
+                    A Técnica Pomodoro de estudo foi criada pelo italiano Francesco Cirillo. Em 1988 o então
+                    estudante
+                    universitário decidiu organizar melhor seus estudos. Para isso, ele usou um daqueles cronômetros
+                    de
+                    cozinha com o formato de um tomate (pomodoro, em italiano) para gerenciar o seu tempo.Foi criada
+                    para utilizar o tempo como um valioso aliado. Ela visa melhorar a agilidade do cérebro, aumentar
+                    o
+                    foco, além de aperfeiçoar continuamente os processos e organizar os estudos.
+                </p>
 
-                    <p>A Técnica Pomodoro é o nome dado a um intervalo de tempo de 25 minutos. Portanto: 1 pomodoro
-                        equivale
-                        a 25 minutos, 2 pomodori (plural de pomodoro) são 50 minutos, 3 pomodori são 75 minutos, e assim
-                        sucessivamente. A cada pomodoro é indicado que o estudante faça uma pausa de 5 minutos. Após 4
-                        pomodori recomenda-se um intervalo maior, de até 30 minutos. A ideia é que o aluno repita o
-                        processo
-                        em todos os dias que precisar estudar.</p>
+                <h2>O que é a técnica pomodoro?</h2>
 
-                </div>
+                <p>A Técnica Pomodoro é o nome dado a um intervalo de tempo de 25 minutos. Portanto: 1 pomodoro
+                    equivale
+                    a 25 minutos, 2 pomodori (plural de pomodoro) são 50 minutos, 3 pomodori são 75 minutos, e assim
+                    sucessivamente. A cada pomodoro é indicado que o estudante faça uma pausa de 5 minutos. Após 4
+                    pomodori recomenda-se um intervalo maior, de até 30 minutos. A ideia é que o aluno repita o
+                    processo
+                    em todos os dias que precisar estudar.</p>
+
+                <h2>Vantagens de usar a técnica Pomodoro</h2>
+                <p>
+                    O italiano Cirillo afirma, no seu livro, que a técnica Pomodoro oferece vários pontos
+                    positivos. Veja alguns:
+                <ul>
+                    <li>Alivia a ansiedade;</li>
+                    <li>Aumenta o foco e a concentração por meio da redução das interrupções;</li>
+                    <li>Aumenta a conscientização das decisões;</li>
+                    <li>Aumenta a motivação e mantém-na constante;</li>
+                    <li> Reforça a determinação para atingir os objetivos;</li>
+                    <li> Melhora o processo de trabalho ou estudo;</li>
+                    <li> Reforça sua determinação de continuar a aplicar-se em face de complexas situações.
+                    </li>
+                </ul>
+                </p>
             </article>
     </main>
 
