--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 <div class="pomodoro-timer">
                     <div class="timer hidden">25:00</div>
                     <div class="options-timer">
-                        <button type="button">Iniciar</button>
-                        <button type="button">Reset</button>
-                        <button type="button">Pause</button>
+                        <button id="start" type="button">Iniciar</button>
+                        <button id="reset" type="button">Reset</button>
+                        <button id="pause" type="button">Pause</button>
                     </div>
                 </div>
-                <button class="more">Saiba um pouco mais</button>
+                <button class="more" id="more">Saiba um pouco mais</button>
             </article>
         </section>
 
-        <section class="section-content-more">
+        <section class="section-content-more hidden">
             <article class="how-started">
 
                 <h2>Como surgiu a técnica de pomodoro</h2>
