--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="main-section">
             <article class="section-content-main">
                 <div class="pomodoro-timer">
-                    <div class="timer"></div>
+                    <div class="timer">25:00</div>
                     <div class="options-timer">
                         <button id="start" type="button">Iniciar</button>
                         <button id="pause" type="button">Pause</button>
