--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             <div class="stars2"></div>
         </div>
 
-        <h1>
+        <div class="header-content">
             Tenha um melhor desempenho em menos tempo!
-        </h1>
+        </div>
     </header>
 
     <main>
         <section class="main-section">
             <article class="section-content-main">
                 <div class="pomodoro-timer">
+                    <h1 class="main-title">Pomodoro Timer!</h1>
                     <div class="timer hidden">25:00</div>
                     <div class="options-timer">
                         <button id="start" type="button">Iniciar</button>
