--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
     <footer class="footer">
         <div class="footer-content">Feito por
-            <a href="">Lucas Pedrolo</a>
+            <a href="#" class="dev">Lucas Pedrolo</a>
         </div>
-        <div class="footer-content">Veja o projeto no <a href="">GitHub</a></div>
-        <div class="footer-content">Acesse meu <a href="">portfolio</a> para ver mais sobre mim</div>
+        <div class="footer-content">Veja o projeto no <a href="#" class="GitHub">GitHub</a></div>
+        <div class="footer-content">Acesse meu <a href="#" class="portfolio">portfolio</a> para ver mais sobre mim</div>
     </footer>
 
     <script src="./js/script.js"></script>
