--- a/index.html
+++ b/index.html
@@ -83,10 +83,15 @@
 
     <footer class="footer">
         <div class="footer-content">Feito por
-            <a href="#" class="dev">Lucas Pedrolo</a>
+            <a href="https://www.linkedin.com/in/lucaspedrolo%E2%9C%93/" class="dev" target="_blank">Lucas Pedrolo</a>
         </div>
-        <div class="footer-content">Veja o projeto no <a href="#" class="GitHub">GitHub</a></div>
-        <div class="footer-content">Acesse meu <a href="#" class="portfolio">portfolio</a> para ver mais sobre mim</div>
+        <div class="footer-content">Veja o projeto no
+            <a href="https://github.com/LucasSamuelPedrolo/PomodoroTimer" target="_blank" class="GitHub">GitHub</a>
+        </div>
+        <div class="footer-content">Acesse meu
+            <a href="#" class="portfolio" target="_blank">portfolio</a> para ver mais
+            sobre mim
+        </div>
     </footer>
 
     <script src="./js/script.js"></script>
