atualições de performace

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </div>
     </footer>
 
-    <script src="./js/script.js"></script>
-
+    <script src="./js/timer.js"></script>
+    <script src="./js/btnMore.js"></script>
 </body>
 
 </html>
